FEATURE: UI   | Linux system tray support [Gudy]
FEATURE: UI   | MyTracker row right-click support for copying torrent URL to clipboard [Parg]
FEATURE: UI   | Right-click menu sorting of columns (Sorting for OSX) [TuxPaper]
FEATURE: UI   | Send text in My Torrents to clipboard [TuxPaper]
FEATURE: UI   | SWT libs auto-updater [Gudy]
FEATURE: UI   | When torrent data is missing, you can change directory via the context menu [TuxPaper]
FEATURE: WebUI| Web Plugin now can set upload rate [Parg]
FEATURE: WebUI| Web Plugin support for uploading torrents [Parg]
FEATURE: WebUI| Webui + xml/http "access" property support for IP range [Parg]
FEATURE: WebUI| Webui + xml/http plugins have had basic plugin view added [Parg]

CHANGE:      | IRC and Tracker Web Pages moved to separate plugin [Parg]
CHANGE: Core | Auto-imported .torrent files are moved (not copied) to default .torrent save dir if enabled [Nolar]
CHANGE: Core | Auto-imported .torrent files are renamed *.imported if default .torrent save dir is not enabled [Nolar]
CHANGE: Core | Can set per-torrent and global peer connection limits [Nolar]
CHANGE: Core | Config/pref/torrent file saving uses intermediate .saving file for more reliability [Nolar]
CHANGE: Core | Currently-connected peer connections are dropped when IPFilter is enabled [Nolar]
CHANGE: Core | File descriptor handles increased from default of 256 to 8192 under OSX [Nolar]
CHANGE: Core | Ignore Share Ratio can now be non-integer [TuxPaper]
CHANGE: Core | New SHA-1 hasher: up to 25% faster [Gudy / Nolar]
CHANGE: Core | Scrape interval now based on # of seeds (15min minimum) [TuxPaper]
CHANGE: Core | Socket writes now done in full MSS-sized chunks [Nolar]
CHANGE: Core | Upload limit can now be set less than 5KB/sec. However, doing so limits download speed too [Parg]
CHANGE: Core | User config/pref/plugins dir culled from Windows' Registry (needs aereg.dll) [Parg]
CHANGE: UI   | All progress/piece bars re-done (again) [TuxPaper]