@@ -116,6 +116,9 @@ public class ConfigurationDefaults {
     def.put("Default save path", "");
     def.put("GUI_SWT_bFancyTab", new Long(1));
     def.put("GUI_SWT_bAlternateTablePainting", new Long(0));
+    def.put("update.start",new Long(1));
+    def.put("update.periodic",new Long(1));
+    def.put("update.opendialog",new Long(1));
     
     boolean bGTKTableBug = false;
     try {
